# erasers_kachaka

./: .env  .gitignore  Dockerfile  Dockerfile.bridge  Dockerfile.erasers_kachaka  README.md  bringup.bash  bringup.service  compose.yaml  docker-compose.yaml  erk_params.env  manipulation.repos  navigation.bash  navigation.service  opl.repos  setup.repos
customs/: activate  dynamic_tf_bridge.cpp  (+4 more)
erasers_kachaka/erasers_kachaka_bringup/: CMakeLists.txt  README.md  package.xml
erasers_kachaka/erasers_kachaka_bringup/launch/: bringup.launch.py  bringup_container.launch.py
erasers_kachaka/erasers_kachaka_bringup/rviz/: container_kachaka.rviz  erasers_kachaka.rviz  erasers_kachaka_default.rviz
erasers_kachaka/erasers_kachaka_cartographer/: .gitignore  CMakeLists.txt  README.md  auto_map_saver.py  package.xml
erasers_kachaka/erasers_kachaka_cartographer/config/: cartographer.lua  cartographer.rviz  navigation.rviz
erasers_kachaka/erasers_kachaka_cartographer/include/erasers_kachaka_cartographer/: occupancy_grid_map_creator.hpp
erasers_kachaka/erasers_kachaka_cartographer/launch/: cartographer_launch.py  localization.cartographer.launch.py  slam.cartographer.launch.py  slam_cartographer.launch.py  slam_toolbox.launch.py  slam_toolbox_launch.py
erasers_kachaka/erasers_kachaka_cartographer/map/: 220-20241101.pgm  220-20241101.yaml  220-2024tecnofesta.pgm  220-2024tecnofesta.yaml  map.pgm  map.yaml
erasers_kachaka/erasers_kachaka_cartographer/params/: cartographer.lua  localization.lua  slam_toolbox.yaml  slam_toolbox_params.yaml
erasers_kachaka/erasers_kachaka_cartographer/src/: auto_map_saver.cpp  map_providor.cpp  map_saver.cpp  occupancy_grid_map_creator.cpp
erasers_kachaka/erasers_kachaka_common/: README.md  package.xml  setup.cfg  setup.py
erasers_kachaka/erasers_kachaka_common/config/: erasers_kachaka.rviz
erasers_kachaka/erasers_kachaka_common/erasers_kachaka_common/: README.md  __init__.py  detection.py  kachaka.py  navigation.py  navigator.py  publish_container_point.py  tts.py  vision.py  whisper_pub.py  whisper_sub.py
erasers_kachaka/erasers_kachaka_common/erasers_kachaka_common/docs/: navigation.md  tts.md
erasers_kachaka/erasers_kachaka_common/erasers_kachaka_common/state/: navigator.py  object_detect.py  wait_push_hand.py
erasers_kachaka/erasers_kachaka_common/erasers_kachaka_common/vision/: object_detect.py
erasers_kachaka/erasers_kachaka_common/samples/: default_navigation.py  kachaka_speak.py  nav2_navigation.py  nav2_waypoint.py  state_nav2_navigation.py
erasers_kachaka/erasers_kachaka_common/scripts/: battery_manager.py  emergency_manager.py  kachaka_speaker_subscriber.py  lidar_observer.py  object_detection_publisher.py  robot_manager.py  robot_manager.py.save  robot_stopper.py  service_tts.py  volume_manager.py
erasers_kachaka/erasers_kachaka_control/: CMakeLists.txt  package.xml
erasers_kachaka/erasers_kachaka_control/launch/: .joy_teleop.launch.py.swp  joy_teleop.launch.py
erasers_kachaka/erasers_kachaka_control/src/: emc_joy.cpp  teleop_joy.cpp
erasers_kachaka/erasers_kachaka_description/: CMakeLists.txt  README.md  package.xml
erasers_kachaka/erasers_kachaka_description/launch/: description.launch  description.launch.py  erasers_kachaka_container_description.launch  erasers_kachaka_container_description.launch.py  erasers_kachaka_description.launch  erasers_kachaka_with_manipulation_description.launch  erasers_kachaka_with_piper.launch
erasers_kachaka/erasers_kachaka_description/urdf/: _kachaka.urdf.xacro  crane_x7.xacro  erasers_kachaka.urdf.xacro  erasers_kachaka_contaier_description.urdf.xacro  erasers_kachaka_container_description.urdf.xacro  erasers_kachaka_description.urdf.xacro  erasers_kachaka_with_manipulation_description.urdf.xacro  kachaka2shelf.urdf.xacro  with_piper.urdf.xacro
erasers_kachaka/erasers_kachaka_interfaces/: CMakeLists.txt  package.xml
erasers_kachaka/erasers_kachaka_interfaces/msg/: Battery.msg
erasers_kachaka/erasers_kachaka_interfaces/srv/: SoundVolume.srv  Speaker.srv
erasers_kachaka/erasers_kachaka_navigation/: CMakeLists.txt  README.md  navigator.py  package.xml
erasers_kachaka/erasers_kachaka_navigation/cfg/: cartographer.lua  navigation.yaml  navigation.yaml[
erasers_kachaka/erasers_kachaka_navigation/erasers_kachaka_cartographer/: CMakeLists.txt  package.xml
erasers_kachaka/erasers_kachaka_navigation/erasers_kachaka_navigation/: CMakeLists.txt  package.xml
erasers_kachaka/erasers_kachaka_navigation/launch/: cartographer.launch.py  localization.emcl.launch.py  navigation.base.launch.py  navigation.devel.launch.py  navigation.launch.py  navigation.main.launch.py  navigation.nav2.launch.py  navigation_launch.py
erasers_kachaka/erasers_kachaka_navigation/map/: map.pgm  map.yaml
erasers_kachaka/erasers_kachaka_navigation/param/: nav2_params.yaml.base  nav2_params.yaml.base2
erasers_kachaka/erasers_kachaka_navigation/params/: leg_finder.yaml  nav2_params.yaml  nav_carto.yaml  navigation.yaml  pot_fields.yaml
erasers_kachaka/erasers_kachaka_navigation/src/: leg_finder_node.cpp  map_saver.cpp  pot_fields_node.cpp
erasers_kachaka/erasers_kachaka_teleop/: CMakeLists.txt  package.xml
erasers_kachaka/erasers_kachaka_teleop/launch/: keyboard_teleop_launch.py  teleop.launch.py
erasers_kachaka/erasers_kachaka_teleop/src/: keyboard_teleop.cpp  teleop.cpp
erasers_kachaka/erasers_kachaka_vision/: CMakeLists.txt  README.md  package.xml
erasers_kachaka/erasers_kachaka_vision/erasers_kachaka_aruco/: package.xml  setup.cfg  setup.py
erasers_kachaka/erasers_kachaka_vision/erasers_kachaka_vision/: CMakeLists.txt  human_tracking.py  package.xml
erasers_kachaka/erasers_kachaka_vision/launch/: aruco_detection_launch.py  human_track_launch.py  tof_pointcloud_launch.py
erasers_kachaka/erasers_kachaka_vision/params/: param_aruco_detection.yaml
erasers_kachaka/erasers_kachaka_vision/scripts/: oak_reverse.py  oak_rgb.py  oak_yolopose.py  oak_yoloseg.py  oak_yolotrack.py
erasers_kachaka/erasers_kachaka_vision/src/: human_track.cpp  object_detection_visualizer.cpp
(+38 files in other folders)
