<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>erasers_kachaka_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gai@todo.todo">gai</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rqt_tf_tree</depend>
  <depend>rviz_2d_overlay_plugins</depend>

  <depend>kachaka_interfaces</depend>
  <depend>kachaka_description</depend>
  <depend>erasers_kachaka_control</depend>
  <depend>erasers_kachaka_common</depend>
  <depend>erasers_kachaka_cartographer</depend>
  <depend>erasers_kachaka_navigation</depend>
  <depend>erasers_kachaka_vision</depend>
  <depend>erasers_kachaka_interfaces</depend>
  <depend>erasers_kachaka_samples</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
