<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>erasers_kachaka_bringup</name>
  <version>1.0.0</version>
  <description>Bringup up eR@sers kachaka and provide RViz</description>
  <maintainer email="gai@todo.todo">gai</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>erasers_kachaka_teleop</depend>
  <depend>erasers_kachaka_common</depend>
  <depend>erasers_kachaka_description</depend>
  <depend>erasers_kachaka_vision</depend>
  <depend>erasers_kachaka_cartographer</depend>
  <depend>erasers_kachaka_navigation</depend>

  <depend>rmw_cyclonedds_cpp</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
