<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>erasers_kachaka_cartographer</name>
  <version>1.0.0</version>
  <description>SLAM package for eR@sers Kachaka</description>
  <maintainer email="nakatogawagai@gmail.com">roboworks</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>cartographer_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_map_server</depend>
  <depend>erasers_kachaka_navigation</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
