<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>erasers_kachaka_description</name>
  <version>1.0.0</version>
  <description>Provide eR@sers Kachaka with Shelf Xacro Models</description>
  <maintainer email="nakatogawagai@gmail.com">roboworks</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>kachaka_description</depend>
  <depend>kachaka_shelf_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
