<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>erasers_kachaka_navigation</name>
  <version>1.0.1</version>
  <description>Kachaka Navigation package</description>
  <maintainer email="nakatogawagai@gmail.com">roboworks</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_bringup</depend>
  <depend>emcl2</depend>
  <depend>topic_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
